// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/SqlOptimization/RecommendIndex render snap shot 1`] = `
<body>
  <div>
    <section
      class="css-1m486f3"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <span
            class="ant-typography"
          >
            暂无需要优化的索引
          </span>
        </div>
        <div
          class="ant-space-item"
        >
          <svg
            height="18"
            viewBox="0 0 1024 1024"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M398.495 365.118c138.97-76.823 29.377-272.875 156.586-280.923C742.605 92.84 655.198 384 655.198 384h117.454c82.783 0 132.925 64.723 112.547 144.562l-67.237 263.425c-11.69 45.8-59.225 82.68-106.25 82.68H448.134c-14.269 0-27.891-2.8-40.343-7.879C384 853.813 384 830.741 384 830.741V401.324s.758-25.168 14.495-36.206M304.19 874.667h-77.18c-35.281 0-66.2-28.501-69.058-63.643l-29.553-363.38C125.54 412.493 151.875 384 187.013 384h117.816c38.863 3.295 36.504 37.732 36.504 37.732v421.12s2.068 28.046-37.143 31.815"
              fill="#FF7043"
            />
          </svg>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`sqle/SqlOptimization/RecommendIndex render snap shot when recommendations defined 1`] = `
<body>
  <div>
    <section
      class="css-1m486f3"
    >
      <div
        class="actiontech-sql-snippet-renderer-wrapper css-q962ee"
      >
        <div
          class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0"
        >
          <span>
            <span
              class="hljs-keyword"
            >
              Select
            </span>
             
            <span
              class="hljs-number"
            >
              1
            </span>
            ;
          </span>
        </div>
        <div
          class="actiontech-copy-icon actiontech-sql-renderer-copy-icon css-1s8kb8e"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`sqle/SqlOptimization/RecommendIndex render snap shot when recommendations is empty 1`] = `
<body>
  <div>
    <section
      class="css-1m486f3"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <span
            class="ant-typography"
          >
            暂无需要优化的索引
          </span>
        </div>
        <div
          class="ant-space-item"
        >
          <svg
            height="18"
            viewBox="0 0 1024 1024"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M398.495 365.118c138.97-76.823 29.377-272.875 156.586-280.923C742.605 92.84 655.198 384 655.198 384h117.454c82.783 0 132.925 64.723 112.547 144.562l-67.237 263.425c-11.69 45.8-59.225 82.68-106.25 82.68H448.134c-14.269 0-27.891-2.8-40.343-7.879C384 853.813 384 830.741 384 830.741V401.324s.758-25.168 14.495-36.206M304.19 874.667h-77.18c-35.281 0-66.2-28.501-69.058-63.643l-29.553-363.38C125.54 412.493 151.875 384 187.013 384h117.816c38.863 3.295 36.504 37.732 36.504 37.732v421.12s2.068 28.046-37.143 31.815"
              fill="#FF7043"
            />
          </svg>
        </div>
      </div>
    </section>
  </div>
</body>
`;
